# rag_approaches

./: README.md  pyproject.toml
src/rag_approaches/noebooks/:  self-querying retriever.ipynb  parent_document_retriver.ipynb
src/rag_approaches/notebooks/: contextual_compression_filtering_retriever.ipynb  ensemble_retriever.ipynb  hypothetical_document_embeder.ipynb  semistructerd(text_tables).ipynb
