[project]
name = "rag_approaches"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Heliya Hasani", email = "heliyahasani@hotmail.com"},
]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
