[project]
name = "rag_approaches"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Heliya Hasani", email = "heliyahasani@hotmail.com"},
]
dependencies = [
    "ipykernel>=6.29.5",
    "langchain>=0.2.14",
    "langchain-community>=0.2.12",
    "lark>=1.2.2",
    "langchain-chroma>=0.1.3",
    "langchain-openai>=0.1.22",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
