[project]
name = "rag_approaches"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Heliya Hasani", email = "heliyahasani@hotmail.com"},
]
dependencies = [
    "ipykernel>=6.29.5",
    "langchain>=0.2.14",
    "langchain-community>=0.2.12",
    "lark>=1.2.2",
    "langchain-chroma>=0.1.3",
    "langchain-openai>=0.1.22",
    "openai>=1.42.0",
    "tiktoken>=0.7.0",
    "chromadb>=0.5.3",
    "sentence-transformers>=3.0.1",
    "FlagEmbedding>=1.2.11",
    "huggingface-hub>=0.24.6",
    "google-search-results>=2.4.2",
    "rank-bm25>=0.2.2",
    "faiss-cpu>=1.8.0.post1",
    "langchain-experimental>=0.0.64",
    "unstructured[all-docs]>=0.15.7",
    "pydantic>=2.8.2",
    "lxml>=5.3.0",
    "langchainhub>=0.1.21",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
